Build in release mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
     - libc6-dev
     - libgdiplus
 script:
- - dotnet build
+ - dotnet build -c release
  - ./render-all.sh
  - ./deploy.sh
