--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -19,10 +19,10 @@ jobs:
       run: ./deploy.sh
     - name: Deploy to gh-pages
       if: github.ref == 'refs/heads/master'
-      uses: maxheld83/ghpages@68f783a4f5313d776c1599e18479607e71c9c738  # v0.3.0
-      env:
-        BUILD_DIR: out/
-        GH_PAT: ${{ secrets.GH_PAT }}
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        publish_dir: out/
+        github_token: ${{ secrets.GH_PAT }}
 
   build-win:
     runs-on: windows-latest
