--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -39,7 +39,8 @@ jobs:
       run: ./deploy.sh
     - name: Deploy to gh-pages (from master on Ubuntu 22)
       if: ${{ github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-22.04' }}
-      uses: peaceiris/actions-gh-pages@v3
+      uses: JamesIves/github-pages-deploy-action@5dc1d5a192aeb5ab5b7d5a77b7d36aea4a7f5c92  # 4.1.4
       with:
-        publish_dir: out/
-        github_token: ${{ secrets.GH_PAT }}
+        branch: gh-pages
+        folder: out
+        single-commit: true
