--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,6 +2,9 @@ name: .NET Core
 
 on: [push, pull_request]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     strategy:
@@ -33,7 +36,7 @@ jobs:
       run: ./deploy.sh
     - name: Deploy to gh-pages (from master on Ubuntu 22)
       if: ${{ github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-22.04' }}
-      uses: JamesIves/github-pages-deploy-action@5dc1d5a192aeb5ab5b7d5a77b7d36aea4a7f5c92  # 4.1.4
+      uses: JamesIves/github-pages-deploy-action@v4.4.1
       with:
         branch: gh-pages
         folder: out
